--- a/misas-thai-street-cuisine-2.0/Pages/Home.razor
+++ b/misas-thai-street-cuisine-2.0/Pages/Home.razor
@@ -3,6 +3,8 @@
 @using misas_thai_street_cuisine_2._0.Components
 @using misas_thai_street_cuisine_2._0.Data
 
+<NotificationBanner />
+
 <div class="homepage-hero">
     <div class="hero-left">
         <h1 class="hero-title" tabindex="-1">@((MarkupString)heroTitle)</h1>
