--- a/misas-thai-street-cuisine-2.0/Pages/Home.razor
+++ b/misas-thai-street-cuisine-2.0/Pages/Home.razor
@@ -3,7 +3,10 @@
 @using misas_thai_street_cuisine_2._0.Components
 @using misas_thai_street_cuisine_2._0.Data
 
-<NotificationBanner />
+@if (NotificationData.IsActive && !notificationDismissed)
+{
+    <NotificationBanner OnDismiss="DismissNotification" />
+}
 
 <div class="homepage-hero">
     <div class="hero-left">
@@ -73,6 +76,7 @@
     [Inject] private IJSRuntime JS { get; set; } = default!;
     [Inject] private NavigationManager Navigation { get; set; } = default!;
 
+    private bool notificationDismissed = false;
     private string heroTitle = string.Empty;
     private string heroSubtitle = string.Empty;
 
@@ -115,6 +119,11 @@
     private void NavigateToCatering()
     {
         Navigation.NavigateTo("/catering");
+    }
+
+    private void DismissNotification()
+    {
+        notificationDismissed = true;
     }
 }
 
