Remove countdown display from header in MainLayout.razor

--- a/misas-thai-street-cuisine-2.0/Layout/MainLayout.razor
+++ b/misas-thai-street-cuisine-2.0/Layout/MainLayout.razor
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="header-right">
-            <div class="countdown right-countdown">
+            @* <div class="countdown right-countdown">
                 <div class="countdown-wrapper">
                     <div class="countdown-main">
                         <span class="countdown-label-text">Order Deadline:</span>
@@ -34,7 +34,7 @@
                         <div class="countdown-tooltip" @onclick:stopPropagation="true">This timer shows how much time you have left to place your order to be eligible for the next delivery day. Orders close the Monday before delivery day at 8:00 PM.</div>
                     }
                 </div>
-            </div>
+            </div> *@
             <div class="cart-anim-wrapper">
                 @if (CartItemCount > 0)
                 {
